2014-10-04  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-09-10  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-08-12  vaiorabbit  <https://twitter.com/vaiorabbit>

	* OpenGL 4.5
	* generator : [BUGFIX] 'const' arguments aren't handled correctly ('const GLfloat buffer' of glClearNamedFramebufferfi).
	* generator : [BUGFIX] Array arguments aren't handled correctly ('GLuint baseAndCount[2]' of glPathGlyphIndexRangeNV).

2014-07-28  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-07-24  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-07-16  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-06-18  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-06-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-05-18  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-05-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-04-04  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-03-21  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-03-18  vaiorabbit  <https://twitter.com/vaiorabbit>

	* OpenGL ES 3.1

2014-03-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-02-17  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/GLUT/glut_gears.rb: Added.

2014-02-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/DebugOutput: Added.

2014-02-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* samples: Fixed Array#pack abuse to improve performance.

2014-02-09  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/GLExcess/glxs_glut.rb : Added.

2014-02-08  vaiorabbit  <https://twitter.com/vaiorabbit>

	* README.md: Added links to freeglut.